--- a/libft/Makefile
+++ b/libft/Makefile
@@ -7,7 +7,7 @@ CFLAGS = -Werror -Wall -Wextra
 
 FILES_LIBFT			= \
 					ft_isalpha.c ft_isdigit.c ft_isalnum.c \
-					ft_isascii.c ft_isprint.c ft_strlen.c \
+					ft_isascii.c ft_isprint.c ft_strlen.c  ft_strlen_tab.c\
 					ft_memset.c ft_bzero.c ft_memcpy.c \
 					ft_memmove.c ft_strlcpy.c ft_strlcat.c \
 					ft_toupper.c ft_tolower.c ft_strchr.c \
